--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@ body {
     background-color: #a4fc9f;
 }
 
-*{
-    border: 1px dotted blue;
-}
-
 p {
     padding: 5px;
 }
@@ -20,3 +16,6 @@ nav ul {
     background-color: #89d9c9;
 }
 
+#shepherd-laying {
+    width: 50%;
+}
