Added Scout pics, I think I fixed the scripts...

--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ nav ul {
     background-color: #89d9c9;
 }
 
-#shepherd-laying {
-    width: 25%;
+#flower-scout {
+    width: 150px;
 }
 
-#title-dog {
-    width: 25%;
+#baby-scout {
+    width: 200px;
 }
 
 .loop-img{
